--- a/pom.xml
+++ b/pom.xml
@@ -133,29 +133,34 @@
             <version>2.2.224</version>
         </dependency>
 
-         <dependency>
-             <groupId>org.hibernate</groupId>
-             <artifactId>hibernate-core</artifactId>
-             <version>7.0.4.Final</version>
-         </dependency>
-
-        <!--<dependency>
-           <groupId>org.hibernate</groupId>
-           <artifactId>hibernate-core</artifactId>
-           <version>5.6.15.Final</version>
-       </dependency>-->
-
         <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>javax.persistence-api</artifactId>
-            <version>2.2</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>7.0.4.Final</version>
         </dependency>
 
+        <!-- <dependency>
+             <groupId>org.hibernate</groupId>
+             <artifactId>hibernate-core</artifactId>
+             <version>5.6.15.Final</version>
+         </dependency>-->
+
+           <dependency>
+               <groupId>javax.persistence</groupId>
+               <artifactId>javax.persistence-api</artifactId>
+               <version>2.2</version>
+           </dependency>
+
 
         <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-runtime</artifactId>
-            <version>2.3.6</version>  <!-- Or a compatible version -->
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+           <dependency>
+               <groupId>org.glassfish.jaxb</groupId>
+               <artifactId>jaxb-runtime</artifactId>
+               <version>4.0.5</version>  <!-- Or a compatible version -->
         </dependency>
         <dependency>
             <groupId>org.revapi</groupId>
