feat: updated README.md, minor fixes.

--- a/testFiles/config.json
+++ b/testFiles/config.json
@@ -1,5 +1,5 @@
 {
-  "pathToBUMPFolder": "testFiles/BUMPSubset",
+  "pathToBUMPFolder": "testFiles/BonoSubset",
   "threads": 4,
   "llmRetries": 2,
   "pathToOutput": "testFiles",
