--- a/testFiles/config.json
+++ b/testFiles/config.json
@@ -1,8 +1,8 @@
 {
-  "pathToBUMPFolder": "testFiles/BonoSubset",
-  "threads": 2,
-  "maxIterations": 4,
-  "maxRetries": 1,
+  "pathToBUMPFolder": "testFiles/BonoSubsetPart2",
+  "threads": 4,
+  "maxIterations": 3,
+  "maxRetries": 0,
   "pathToOutput": "testFiles",
   "llmProvider": "ollama",
   "ollamaUri": "http://localhost:11434",
